fixing the position of icons and text on smaller devices

--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -6,7 +6,7 @@
     padding: 6px;
 
     .skill-image {
-      max-width: 105px;
+      width: 75px;
       height: 100%;
       -o-object-fit: contain;
       object-fit: contain;
